WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23620
Crash in appcache/resource-redirect.html on Tiger
https://bugs.webkit.org/show_bug.cgi?id=23620
Summary
Crash in appcache/resource-redirect.html on Tiger
Alexey Proskuryakov
Reported
2009-01-29 04:51:10 PST
This test crashes on Tiger, patch forthcoming.
Attachments
proposed fix
(12.67 KB, patch)
2009-01-29 05:39 PST
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2009-01-29 05:39:45 PST
Created
attachment 27147
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2009-01-29 05:42:22 PST
<
rdar://problem/6539244
>
Anders Carlsson
Comment 3
2009-01-29 11:13:01 PST
Comment on
attachment 27147
[details]
proposed fix 488 ASSERT(!m_currentResource || m_pendingEntries.find(handle->request().url()) == m_pendingEntries.end()); Instead of doing .find you can just assert !m_pendingEntries.contains(handle->request().url()) r=me
Alexey Proskuryakov
Comment 4
2009-01-29 12:40:44 PST
Committed revision 40368.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug