        Reviewed by Anders Carlsson.

https://bugs.webkit.org/show_bug.cgi?id=23620
        Crash in appcache/resource-redirect.html on Tiger

        There was a bug in the test case - it didn't send a Location header, and on Tiger, this
        resulted in a failure callback being sent. It turned out that proper redirects weren't
        caught at all.

        Tests: http/tests/appcache/manifest-redirect-2.html
               http/tests/appcache/resource-redirect-2.html

        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::ApplicationCacheGroup::didFail): Fixed this function to not crash if
        didReceiveResponse() wasn't called for this request.
        (WebCore::ApplicationCacheGroup::didReceiveResponse): Fixed to check for redirects correctly.
        (WebCore::ApplicationCacheGroup::didReceiveManifestResponse): Ditto.



Canonical link: https://commits.webkit.org/32551@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40368 268f45cc-cd09-0410-ab3c-d52691b4dbfc