LayoutTests/http/tests/appcache/resources/manifest-redirect.php
@@ -3,5 +3,5 @@ header("Expires: Thu, 01 Dec 2003 16:00:00 GMT");
 header("Cache-Control: no-cache, must-revalidate");
 header("Pragma: no-cache");
 header('HTTP/1.1 307 Temporary Redirect');
-header('empty.manifest');
+header('Location: simple.manifest');
 ?>
