third_party/WebKit/LayoutTests/http/tests/appcache/resources/resource-redirect.php
@@ -4,5 +4,5 @@ header("Expires: Thu, 01 Dec 2003 16:00:00 GMT");
 header("Cache-Control: no-cache, must-revalidate");
 header("Pragma: no-cache");
 header('HTTP/1.1 307 Temporary Redirect');
-header('simple.txt');
+header('Location: simple.txt');
 ?>
